<resources>
    <string name="app_name">Close By</string>
    <string name="api_key">AIzaSyA7f3V7984G9n8LggAe5xL2wuCq0874sbs</string>
    <string name="web_service_url">
        https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=
    </string>
    <string name="invalid_url">Invalid URL</string>
    <string name="place_description_image">A graphical representation of the service rendered by a
        particular place
    </string>
    <string name="longitude">Long: %.4f</string>
    <string name="latitude">Lat: %.4f</string>
    <string name="day_description">%1$s: %2$s</string>
    <string name="humidity">%.2f Km</string>
    <string name="hint_text">Enter the type of service you want(e.g Bank, Restaurant, ATM)</string>
    <string name="read_error">This type of service is not available in this area</string>
    <string name="connect_error">Unable to connect to Google Maps Servers</string>
    <string name="internet_error">Can\'t connect to the internet</string>


    <string name="largetext">LargeText</string>
    <string name="menuItem_navigate">Directions</string>
    <string name="menuItem_view">More</string>
    <string name="restaurant">Restaurant</string>
    <string name="bank">Bank</string>
    <string name="school">School</string>
    <string name="hospital">Hospital</string>
    <string name="address">Address: %1$s</string>
    <string name="phoneNum">Phone Number: %1$s</string>
    <string name="web">url: %1$s</string>
    <string name="textview">TextView</string>
    <string name="connection_error">No Internet Access</string>
    <string name="mobile_data_connected">Mobile Data Connected</string>
    <string name="wifi_connected">Internet Access Granted</string>
    <string name="vicinity_json">vicinity</string>
    <string name="icon_json">icon</string>
    <string name="place_id_json">place_id</string>
    <string name="name_json">name</string>
    <string name="lat_json">lat</string>
    <string name="lng_json">lng</string>
    <string name="geometry_json">geometry</string>
    <string name="location_json">location</string>
    <string name="results_json">results</string>
    <string name="status_json">status</string>
    <string name="base">https://maps.googleapis.com/maps/api/place/details/json?placeid=</string>
    <string name="key2"><![CDATA[&key=AIzaSyA7f3V7984G9n8LggAe5xL2wuCq0874sbs]]></string>
    <string name="petrol_station">Petrol Stations</string>
    <string name="atm">atm</string>
    <string name="chemists">Chemists</string>
    <string name="supermarket">Supermarkets</string>
    <string name="hotels">Hotels</string>
    <string name="department_stores">Department Stores</string>
    <string name="post_office">Post Offices</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="parking">Parking</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="church">Church</string>
    <string name="mosque">Mosque</string>
    <string name="about_item">About</string>
    <string name="title_activity_add_place">New Place</string>
    <string name="hint_name">Enter Place Name</string>
    <string name="hint_place_vicinity">Enter Full Address</string>
    <string name="hint_telephone">Enter Phone Number</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_icon">Icon Url</string>
    <string name="latText">Lat: %s</string>
    <string name="longText">Long:</string>
</resources>
